tests/tests/snapshots/integration__run_file@bit_array.gleam.snap
---
source: tests/tests/integration.rs
expression: "formatdoc!\n{\"\n            STDOUT\n            {out}\n            STDERR\n            {err}\"}"
input_file: cli/tests/inputs/bit_array.gleam
---
STDOUT

STDERR
