tests/tests/snapshots/integration__run_file@check_approx.gleam.snap
---
source: tests/tests/integration.rs
expression: "formatdoc!\n{\"\n            STDOUT\n            {out}\n            STDERR\n            {err}\"}"
input_file: cli/tests/inputs/check_approx.gleam
---
STDOUT

STDERR
