tests/tests/snapshots/integration__run_file@gleam.gleam.snap
---
source: tests/tests/integration.rs
expression: "formatdoc!\n{\"\n            STDOUT\n            {out}\n            STDERR\n            {err}\"}"
input_file: cli/tests/inputs/gleam.gleam
---
STDOUT

STDERR
Ignoring `<INPUTS>/gleam.gleam`: `gleam` is a reserved module name.
